Finish Static Pages

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,8 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% provide(:title, "Help") %>
+<h1>Help</h1>
+<p>
+Get rails help at
+<a href="http://railstutorial.org/help">Ruby on Rails Tutorial Help</a>
+<br>Get help on the sample app at
+<a href="http://railstutorial.org/book">Help for sample app</a>
+</p>
